budgie-desktop (10.2.9-3ubuntu3) zesty; urgency=medium

  * Add 0002-check-that-schema-and-prefix-have-been-previously-cr.patch
    - fix panel crash when C based applets are removed
  * Add 0003-fix-crash-of-the-window-manager-when-the-current-loc.patch
    - fix window manager crash when the current keyboard locale is 
      deleted

 -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 22 Feb 2017 19:43:56 +0000

budgie-desktop (10.2.9-3ubuntu2) zesty; urgency=medium

  [ David Mohammed ]
  * Add adapt-to-mutter-324.patch:
    - Update build to support mutter 3.24

  [ Jeremy Bicha ]
  * debian/control: Build-depend on libmutter-0-dev

 -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 15 Feb 2017 23:36:22 +0000

budgie-desktop (10.2.9-3ubuntu1) zesty; urgency=medium

  * Bug-fix release (LP: #1662713)
    - ubuntu patch to ensure gnome-screensaver does not coredump
      due to missing draw-background key
    - upstream patch 0001-panel-Restore-missing-animations-GTK-3.22.patch
      GTK+3.22 specific patch to fix popover animations

  [ Jeremy Bicha ]
  * Add adapt-to-gsd-324.patch:
    - Update gnome-session file for gnome-settings-daemon 3.24
  * debian/control:
    - Bump minimum gnome-settings-daemon to 3.23.3 for above change

 -- David Mohammed <fossfreedom@ubuntu.com>  Tue, 07 Feb 2017 16:26:04 -0500

budgie-desktop (10.2.9-2ubuntu1) zesty; urgency=medium

  * Bug-fix release (LP: #1653739)
    - ubuntu patch to ensure nm-applet displays in the X11 system tray

 -- David Mohammed <fossfreedom@ubuntu.com>  Tue, 03 Jan 2017 19:48:38 +0000

budgie-desktop (10.2.9-2) unstable; urgency=medium

  * Bug-fix release
    - drop the last two remaining patches since additional
      testing with the new versions of gnome-menus and
      network-manager now in Stretch makes these patches unnecessary
      (Closes: #849595)

 -- David Mohammed <fossfreedom@ubuntu.com>  Mon, 02 Jan 2017 10:50:32 +0000

budgie-desktop (10.2.9-1) unstable; urgency=medium
